--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
             <header>
                 <div class="barra-top">
                     <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Page templates</li>
-                        <li>A parent page</li>
-                        <li>Features</li>
-                        <li>Blog</li>
-                        <li>Contact</li>
+                        <li>HOME</li>
+                        <li>ABOUT</li>
+                        <li>PAGE TEMPLATES</li>
+                        <li>A PARENT PAGE</li>
+                        <li>FEATURES</li>
+                        <li>BLOG</li>
+                        <li>CONTACT</li>
                     </ul>
                 </div>
             </header>
