--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="container">
             <header>
+                <img src="http://footage.framepool.com/shotimg/qf/809056922-mettlach-saar-valle-nebbia.jpg" alt="bosco">
                 <div class="barra-top">
                     <ul>
                         <li>HOME</li>
