fine header (problema lunghezza barra)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <title>Template</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <h1>NATURAL</h1>
+                <h3>ANOTHER BEAUTIFUL ORGANIC THEME</h3>
                 <img src="http://footage.framepool.com/shotimg/qf/809056922-mettlach-saar-valle-nebbia.jpg" alt="bosco">
                 <div class="barra-top">
                     <ul>
