--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="container">
+            <!-- inizio parte sopra -->
             <header>
                 <h1>NATURAL</h1>
                 <h3>ANOTHER BEAUTIFUL ORGANIC THEME</h3>
@@ -24,17 +25,25 @@
                     </ul>
                 </div>
             </header>
+            <!-- inizio parte centrale -->
             <div class="row clearfix">
-                <aside>
-                    <div class="content"></div>
+                <aside class="left">
+                    <div class="content">
+                        <p>How to pick a WordPress theme for 2019</p><br>
+                        <p>The Updated Gutenberg Portfolio Theme</p><br>
+                        <p>Black Friday Through Cyber Monday Deal for wordPress website owners</p><br>
+                        <p>The ultimate guide to optimizing your wordpress theme for Gutenberg</p><br>
+                        <p>A better wordpress page builder - organic builder widgets pro</p><br>
+                    </div>
                 </aside>
                 <main>
                     <div class="content"></div>
                 </main>
-                <aside>
+                <aside class="right">
                     <div class="content"></div>
                 </aside>
             </div>
+            <!-- inizio parte footer -->
             <footer>
             </footer>
         </div>
