--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
             <div class="row clearfix">
                 <aside class="left">
                     <div class="content">
-                        <p>How to pick a WordPress theme for 2019</p><br>
-                        <p>The Updated Gutenberg Portfolio Theme</p><br>
-                        <p>Black Friday Through Cyber Monday Deal for wordPress website owners</p><br>
-                        <p>The ultimate guide to optimizing your wordpress theme for Gutenberg</p><br>
-                        <p>A better wordpress page builder - organic builder widgets pro</p><br>
+                        <p><strong>How to pick a WordPress theme for 2019</strong></p><br>
+                        <p><strong>The Updated Gutenberg Portfolio Theme</strong></p><br>
+                        <p><strong>Black Friday Through Cyber Monday Deal for wordPress website owners</strong></p><br>
+                        <p><strong>The ultimate guide to optimizing your wordpress theme for Gutenberg</strong></p><br>
+                        <p><strong>A better wordpress page builder - organic builder widgets pro</strong></p><br>
                     </div>
                 </aside>
                 <main>
-                    <div class="content"></div>
+                    <div class="content">
+                        <p class="centrale">THREE COLUMN<br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
                 </main>
                 <aside class="right">
                     <div class="content"></div>
