--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </div>
                 </main>
                 <aside class="right">
-                    <div class="content-widget">TEXT WIDGET<br><br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
-                    <div class="content-widget">TEXT WIDGET<br><br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
-                    <div class="content-widget">TEXT WIDGET<br><br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
+                    <div class="content-widget">TEXT WIDGET<br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
+                    <div class="content-widget">TEXT WIDGET<br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
+                    <div class="content-widget">TEXT WIDGET<br><br>This is an example of a text widget. You could write a brief introduction to your site, add links, images, video HTML and more using a text widget. It's pretty handy!</div>
                 </aside>
             </div>
             <!-- inizio parte footer -->
