fine prima bozza senza sfondo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/8b28a66c17.js" crossorigin="anonymous"></script>
         <title>Template</title>
     </head>
     <body>
@@ -48,8 +49,17 @@
                 </aside>
             </div>
             <!-- inizio parte footer -->
-            <!-- inizio parte footer -->
-            <footer
+            <footer>
+            <div class="barra-bottom">
+                <p class="fine"><em>Pagina realizzata da me</em></p>
+            </div>
+            <div class="icons">
+                <ul>
+                    <li class="fb"><i class="fab fa-facebook-square"></i></li>
+                    <li class="instagram"><i class="fab fa-instagram"></i></li>
+                    <li class="github"><i class="fab fa-github"></i></li>
+                </ul>
+            </div>
             </footer>
         </div>
     </body>
