--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="container">
             <!-- inizio parte sopra -->
             <header>
+                <i class="fas fa-crown"></i>
                 <h1>NATURAL</h1>
                 <h3>ANOTHER BEAUTIFUL ORGANIC THEME</h3>
                 <img src="http://footage.framepool.com/shotimg/qf/809056922-mettlach-saar-valle-nebbia.jpg" alt="bosco">
